add lesson openAPI doc.
